[package]
name = "pi-display"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_16"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
